# CAN-BUS-HACKING

./: .gitignore  README.md  pyproject.toml
data/features/: .gitkeep
data/models/: .gitkeep
data/processed/: .gitkeep
data/raw/: .gitkeep
docker/: Dockerfile  docker-compose.yml  entrypoint.sh
docs/: architecture.md  demo_script.md  metrics.md  threat_model.md
src/canlab/: __init__.py  config.py
src/canlab/api/: __init__.py  main.py
src/canlab/attack/: __init__.py  injector.py  mimic_model.py  optimizer.py
src/canlab/data/: __init__.py  features.py  ingest.py
src/canlab/ids/: __init__.py  autoencoder.py  cusum.py  isolation_forest.py  rules.py
src/canlab/sim/: __init__.py  bus.py  ecu_abs.py  ecu_cluster.py  ecu_engine.py  ecu_steer.py
src/canlab/ui/: __init__.py  app_streamlit.py
tests/: test_api.py  test_attack.py  test_config.py  test_data.py  test_ids.py  test_sim.py
